ecmascript/parser/tests/test262-error-references/fail/45b295d6c9abe25d.js.stderr
error: Unexpected token Some(RBrace). Expected one of identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/45b295d6c9abe25d.js:1:6
  |
1 | ({ * })
  |      ^

